Closed
Bug 1364870
Opened 8 years ago
Closed 8 years ago
ffmpeg decoder returning errors if no frame decoded.
Categories
(Core :: Audio/Video: Playback, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla55
People
(Reporter: jya, Assigned: jya)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
59 bytes,
text/x-review-board-request
|
mozbugz
:
review+
gchang
:
approval-mozilla-beta+
|
Details |
|
2.12 KB,
patch
|
gchang
:
approval-mozilla-esr52+
|
Details | Diff | Splinter Review |
In bug 1257116, many media files use in mochitests were shortened.
However, those files are invalid and start with data that can't be decoded.
They happen to work because we skip data with error.
Those files should be remade so that they don't contain errors.
Updated•8 years ago
|
status-firefox53:
--- → wontfix
status-firefox54:
--- → affected
status-firefox55:
--- → affected
Version: unspecified → 52 Branch
Updated•8 years ago
|
Priority: -- → P3
| Assignee | ||
Comment 1•8 years ago
|
||
The problem is in FFmpeg MediaDataDecoder...
Summary: mochitest short media files are invalid → ffmpeg decoder returning errors if no frame decoded.
| Assignee | ||
Updated•8 years ago
|
Priority: P3 → P1
| Comment hidden (mozreview-request) |
Assignee: nobody → jyavenard
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8869350 [details]
Bug 1364870: [ffmpeg] only check format if frame has been decoded.
https://reviewboard.mozilla.org/r/140988/#review144514
Attachment #8869350 -
Flags: review?(gsquelart) → review+
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0333314aa0e9
[ffmpeg] only check format if frame has been decoded. r=gerald
Comment 5•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment 6•8 years ago
|
||
Can this ride the 55 train or should it be considered for backport?
status-firefox-esr52:
--- → affected
Flags: needinfo?(jyavenard)
Comment 8•8 years ago
|
||
(In reply to Jean-Yves Avenard [:jya] from comment #7)
> I'd like this backported. Yes.
Can you request uplift, then, please? :)
Flags: needinfo?(jyavenard)
| Assignee | ||
Comment 9•8 years ago
|
||
Comment on attachment 8869350 [details]
Bug 1364870: [ffmpeg] only check format if frame has been decoded.
Approval Request Comment
[Feature/Bug causing the regression]: 1270016
[User impact if declined]: audio decoding error with some contents.
[Is this code covered by automated tests?]: yes. Though as errors are ignored, the regression didn't get spotted. This is being worked out.
[Has the fix been verified in Nightly?]: manually tested
[Needs manual test from QE? If yes, steps to reproduce]: create/set the pref media.audio-max-decode-error and set it to 0. Attempt to play the gizmo.mp4 in dom/media/test on Linux. Without the fix, the file won't play
[List of other uplifts needed for the feature/fix]: no
[Is the change risky?]: no
[Why is the change risky/not risky?]: we only check the file format once decoded.
[String changes made/needed]: None
Flags: needinfo?(jyavenard)
Attachment #8869350 -
Flags: approval-mozilla-beta?
Comment 10•8 years ago
|
||
Hi Brindusa, could you help find someone to verify if this issue was fixed as expected on a latest Nightly build? Thanks!
Flags: needinfo?(brindusa.tot)
Comment 11•8 years ago
|
||
Reproduced the issue on Nightly 55.0a1, on a build from 05/06/2017 on Ubuntu 16.04 x64.
Verified as fixed on the latest Nightly, 55.0a1, build ID 20170525100253 on Ubuntu 16.04 x64.
Comment 12•8 years ago
|
||
Comment on attachment 8869350 [details]
Bug 1364870: [ffmpeg] only check format if frame has been decoded.
Fix a regression and was verified. Beta54+. Should be in 54 beta 12.
Attachment #8869350 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 13•8 years ago
|
||
| bugherder uplift | ||
Updated•8 years ago
|
Flags: qe-verify+
Comment 14•8 years ago
|
||
Reproduced on Firefox 54 beta 11 under Ubuntu 16.04 LTS 64-bit.
Verified as fixed on Firefox 54 beta 12.
Flags: qe-verify+
Comment 15•8 years ago
|
||
Is this something we should consider for ESR52 too? If so, it'll need a rebased patch.
Flags: needinfo?(jyavenard)
| Assignee | ||
Comment 16•8 years ago
|
||
Yes, we should....
I'll wrap a patch (though I'm surprised the current one wouldn't apply)
Flags: needinfo?(jyavenard)
| Assignee | ||
Updated•8 years ago
|
Flags: needinfo?(jyavenard)
| Assignee | ||
Comment 17•8 years ago
|
||
The format member isn't set when an audio frame hasn't been decoded yet.
MozReview-Commit-ID: IgUj6bjVzdF
| Assignee | ||
Comment 18•8 years ago
|
||
Comment on attachment 8883881 [details] [diff] [review]
[ffmpeg] only check format if frame has been decoded. r=gerald, a=gchang
[Approval Request Comment]
If this is not a sec:{high,crit} bug, please state case for ESR consideration:
User impact if declined: Decoding error with some audio files
Fix Landed on Version: 54
Risk to taking this patch (and alternatives if risky): no risk
String or UUID changes made by this patch: none
Flags: needinfo?(jyavenard)
Attachment #8883881 -
Flags: approval-mozilla-esr52?
Comment 19•8 years ago
|
||
Comment on attachment 8883881 [details] [diff] [review]
[ffmpeg] only check format if frame has been decoded. r=gerald, a=gchang
Fix an audio playback issue. Let's uplift this to ESR52.3.
Attachment #8883881 -
Flags: approval-mozilla-esr52? → approval-mozilla-esr52+
Comment 20•8 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•