Bug 1364870 - [ffmpeg] only check format if frame has been decoded. r=gerald, a=gchang

The format member isn't set when an audio frame hasn't been decoded yet.

MozReview-Commit-ID: IgUj6bjVzdF